--- a/index.html
+++ b/index.html
@@ -379,7 +379,11 @@
                   >
                   <span class="ellipsis">...</span>
 
-                  <button class="read-more-btn" onclick="toggleText('text2')">
+                  <button
+                    class="read-more-btn"
+                    onclick="toggleText('text2')"
+                    style="font-size: 2.2rem"
+                  >
                     Read More
                   </button>
                 </p>
@@ -435,29 +439,6 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="century-villa">
-          <div class="villa-1">
-            <img src="./images/villa/19th-wood.jpg" class="villa-1-photo" />
-          </div>
-          <div class="villa-center-photo">
-            <div class="villa-2">
-              <img src="./images/villa/19th-wood-3.jpg" class="villa-2-photo" />
-            </div>
-            <div>
-              <div class="villa-3">
-                <p class="villa-heading">
-                  <span class="century-number">19</span>th century villa
-                </p>
-                <p class="villa-description">
-                  Experience the synthesis of old-world charm and the future.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="villa-4">
-            <img src="./images/villa/19th-wood-2.jpg" class="villa-4-photo" />
-          </div>
-        </div> -->
         <div class="century-villa container">
           <div class="cube1">
             <img src="./images/villa/19th-wood.jpg" class="villa-1-photo" />
@@ -667,7 +648,7 @@
               <span class="ellipsis">...</span>
             </p>
             <button
-              class="read-more-btn"
+              class="read-more-btn service-btn-padding"
               onclick="toggleText('text3')"
               style="font-size: 2.4rem"
             >
