--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               d="M3 4h18v2H3V4zm0 7h12v2H3v-2zm0 7h18v2H3v-2z"
             />
           </svg>
-          <div>
+          <div class="side-bar-hide">
             <ul id="side-bar">
               <svg
                 class="menu-list close"
